--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,12 @@
 /* Utility */
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #1E2D3B;
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     margin: 0 auto;
     padding-top: 30px;
-    height: 100%;
     width: 80%;
 }
 
@@ -37,10 +33,29 @@ body {
 /* / Header */
 
 /* Main */
-main {
-    height: calc(100vh - 100px);
-    width: 100%;
-    background-color: #1E2D3B;
+.select_settings {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+#genres {
+    margin: 20px 0;
+    width: 80px;
+    height: 25px;
+}
+
+.btn {
+    height: 25px;
+    margin: 0 5px;
+}
+
+#section_cd {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .box {
